# HiCPack

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: alignment.md  bg_model.md  index.md  installation.md  raw_map.md  tad_calling.md  visualization.md
hic-pack/: config-hicpack.txt  config-system.txt  test.py
hic-pack/scripts/: BackgroundModel.py  FitHiC.R  HiCPlotter.py  Makefile  TADCalling.py  bg_model.sh  bowtie_combine.sh  bowtie_pairing.sh  bowtie_wrap.sh  build_raw_maps.sh  gothic.R  hic.inc.sh  hicpack2GOTHiC.sh  mapped_2hic_dnase.py  mapped_2hic_fragments.py  mapped_2hic_fragments.sh  mapping_stat.sh  markAllelicStatus.py  mergeSAM.py  merge_statfiles.py  merge_stats.sh  merge_valid_interactions.sh  onTarget.py  tad_calling.sh  visualization.sh
hic-pack/scripts/BackgroundModels/: BackgroundModel.py
hic-pack/scripts/utils/: bedToSparse.py
hicpack/: __init__.py  config-hicpack.txt  config-install.txt  config-system.txt
hicpack/annotation/: README.rst
hicpack/results/: test.py
hicpack/scripts/: BackgroundModel.py  FitHiC.R  Makefile  TADCalling.py  TADtree.py  bg_model.sh  bowtie_combine.sh  bowtie_pairing.sh  build_matrix  cutsite_trimming  gothic.R  hic.inc.sh  hicpack2GOTHiC.sh  mapped_2hic_dnase.py  mapped_2hic_fragments.py  mapped_2hic_fragments.sh  mapping_stat.sh  markAllelicStatus.py  mergeSAM.py  merge_statfiles.py  merge_valid_interactions.sh  onTarget.py  split_valid_interactions.py  tad_calling.sh  tadtree.py  test.py  visualization.sh
(+7 files in other folders)
