[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hicpack"
author = "Mohsen Naghipourfar"
author-email = "mn7697np@gmail.com"
home-page = "https://github.com/Naghipourfar/HiCPack"
description-file = 'README.md'
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires = [
    "future-fstrings",
    "get_version",
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "bx-python",
    "pysam",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
]
