[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hicpack"
author = "Mohsen Naghipourfar"
author-email = "mn7697np@gmail.com"
home-page = "http://hicpack.readthedocs.io/"
classifiers = ["License :: OSI Approved :: MIT License"]

requires = [
    "future-fstrings",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "bx-python",
    "pysam"
]
